Fix some styling issues

--- a/css/1-online-newspaper/responsive.css
+++ b/css/1-online-newspaper/responsive.css
@@ -41,6 +41,7 @@
         content: "A";
 
         color: white;
+        cursor: pointer;
 
         font-family: "Anicons Regular", sans-serif;
         font-size: 1.5rem;
